[project]
name = "sbm-transformer"
version = "0.1.0"
description = "SBM-Transformer: Sparse Block Matrix Transformer for Long Range Arena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.1",
    "numpy>=1.26.0",
    "einops>=0.7.0",
    "performer-pytorch>=1.1.4",
    "reformer-pytorch>=1.4.4",
    "local-attention>=1.9.0",
    "pandas",
    "pyyaml",
    "scipy",
    "pydantic",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "requests>=2.32.5",
    "transformers>=5.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "dgl-cu124"
url = "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
dgl = { index = "dgl-cu124" }

[tool.uv.pip]
extra-index-url = ["https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"]
